--- a/src/patternfly/components/Table/table-column-help-action.hbs
+++ b/src/patternfly/components/Table/table-column-help-action.hbs
@@ -2,7 +2,7 @@
   {{#if table-column-help-action--attribute}}
     {{{table-column-help-action--attribute}}}
   {{/if}}>
-  {{#> button button--modifier="pf-m-plain" button--attribute='aria-label="More info"'}}
+  {{#> button button--IsPlain=true button--HasNoPadding=true button--aria-label='aria-label="More info"'}}
     <i class="pf-v5-pficon pf-v5-pficon-help" aria-hidden="true"></i>
   {{/button}}
 </span>
